--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "npm run development",
+        "dev": "vite",
+        "build": "vite build",
         "development": "mix",
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
@@ -10,9 +12,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
+        "@vitejs/plugin-react": "^4.3.1",
+        "axios": "^1.7.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
+    "dependencies": {
+        "laravel-vite-plugin": "^1.0.4"
     }
 }
