--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "private": true,
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
@@ -12,12 +13,17 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
+        "@vitejs/plugin-react": "^4.3.1",
         "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^0.25",
+        "autoprefixer": "^10.4.19",
+        "axios": "^1.7.2",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
-        "tailwindcss": "^3.1.0"
+        "postscss": "^2.0.0",
+        "tailwindcss": "^3.4.4"
+    },
+    "dependencies": {
+        "laravel-vite-plugin": "^1.0.4"
     }
 }
