--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
         "lodash": "^4.17.19",
         "postcss": "^8.4.6",
         "postscss": "^2.0.0",
-        "tailwindcss": "^3.4.4"
+        "tailwindcss": "^3.4.4",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
     },
     "dependencies": {
         "laravel-vite-plugin": "^1.0.4"
